refactor: rename docs folder to problem

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "javascript.validate.enable": false,
-  "cSpell.words": ["airbnb", "beecrowd"]
+  "cSpell.words": ["airbnb", "beecrowd", "rgba", "Timelimit"]
 }
